# dundie-rewards-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yaml
assets/: people.csv
migrations/2023-04-22-074048_create_person/: down.sql  up.sql
migrations/2023-04-24-175409_create_balance/: down.sql  up.sql
migrations/2023-04-25-012737_create_movement/: down.sql  up.sql
migrations/2023-04-28-193906_create_user/: down.sql  up.sql
migrations/2023-05-09-172400_add_column_superuser_to_user/: down.sql  up.sql
migrations/2023-05-09-202829_add_column_username_to_user/: down.sql  up.sql
migrations/2023-05-11-212512_add_admin_user/: down.sql  up.sql
src/: auth.rs  cli.rs  core.rs  database.rs  main.rs  security.rs  serializers.rs  utils.rs
src/cli/: commands.rs
src/cli/commands/: add.rs  load.rs  movements.rs  show.rs  transfer.rs
src/database/: connection.rs  controller.rs  models.rs  schema.rs
src/utils/: cli.rs  db.rs  email.rs  exchange.rs  user.rs
